--- a/InterfazGrafica/InterfazGrafica.vcxproj
+++ b/InterfazGrafica/InterfazGrafica.vcxproj
@@ -153,6 +153,9 @@
     <ClInclude Include="VentanaADM.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="VentanaEmpleados.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
@@ -165,6 +168,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="VentanaADM.cpp" />
+    <ClCompile Include="VentanaEmpleados.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
@@ -182,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VentanaADM.resx">
       <DependentUpon>VentanaADM.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VentanaEmpleados.resx">
+      <DependentUpon>VentanaEmpleados.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
