--- a/InterfazGrafica/InterfazGrafica.vcxproj.filters
+++ b/InterfazGrafica/InterfazGrafica.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="VentanaEmpleados.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="FormularioAgregarEmpleado.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -59,6 +62,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="VentanaEmpleados.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="FormularioAgregarEmpleado.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
