--- a/InterfazGrafica/InterfazGrafica.vcxproj
+++ b/InterfazGrafica/InterfazGrafica.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="FormularioAgregarEmpleado.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Producto.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
@@ -161,6 +164,7 @@
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="CppCLR_WinformsProjekt.cpp" />
     <ClCompile Include="Form1.cpp" />
+    <ClCompile Include="FormularioAgregarEmpleado.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -183,6 +187,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormularioAgregarEmpleado.resx">
+      <DependentUpon>FormularioAgregarEmpleado.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VentanaADM.resx">
       <DependentUpon>VentanaADM.h</DependentUpon>
