--- a/InterfazGrafica/InterfazGrafica.vcxproj
+++ b/InterfazGrafica/InterfazGrafica.vcxproj
@@ -150,6 +150,9 @@
     <ClInclude Include="FormularioAgregarEmpleado.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="FormularioBuscarEmpleado.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Producto.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
@@ -165,6 +168,7 @@
     <ClCompile Include="CppCLR_WinformsProjekt.cpp" />
     <ClCompile Include="Form1.cpp" />
     <ClCompile Include="FormularioAgregarEmpleado.cpp" />
+    <ClCompile Include="FormularioBuscarEmpleado.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -190,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormularioAgregarEmpleado.resx">
       <DependentUpon>FormularioAgregarEmpleado.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormularioBuscarEmpleado.resx">
+      <DependentUpon>FormularioBuscarEmpleado.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VentanaADM.resx">
       <DependentUpon>VentanaADM.h</DependentUpon>
