--- a/InterfazGrafica/InterfazGrafica.vcxproj.filters
+++ b/InterfazGrafica/InterfazGrafica.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="FormularioBuscarEmpleado.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="VentanaVENDER.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -71,6 +74,12 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="FormularioBuscarEmpleado.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VentanaEmpleados1.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VentanaVENDER.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
