--- a/InterfazGrafica/InterfazGrafica.vcxproj.filters
+++ b/InterfazGrafica/InterfazGrafica.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="VentanaVENDER.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="VentanaProductos.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -80,6 +83,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="VentanaVENDER.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VentanaProductos.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
