Cree el archivo "Producto.cpp" y pase varias de las definiciones de metodos a ese archivo

--- a/InterfazGrafica/InterfazGrafica.vcxproj.filters
+++ b/InterfazGrafica/InterfazGrafica.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="Empleados.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Producto.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico">
