--- a/InterfazGrafica/InterfazGrafica.vcxproj.filters
+++ b/InterfazGrafica/InterfazGrafica.vcxproj.filters
@@ -56,6 +56,15 @@
     <ClInclude Include="Venta.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="VentanBuscarEmpleado.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="VentanaBajaTemportalEmpleado.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="VentanaBajaTotalEmpleado.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -98,6 +107,15 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Venta.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VentanBuscarEmpleado.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VentanaBajaTemportalEmpleado.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VentanaBajaTotalEmpleado.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
